# omniclaude

./: .bandit  .cross-repo-policy.yaml  .env  .env.allowlist  .env.example  .env.example.kafka  .gitattributes  .gitignore  .markdown-link-check.json  .migration_freeze  .pre-commit-config.yaml  .ruffignore  .secrets.baseline  ACTION_LOGGING_MANIFEST_COMPLETE.md  ACTUAL_MANIFEST_OUTPUT.txt  AGENT.md  AGENT_ACTION_LOGGING_COMPLETE.md  AGENT_CONFIG_CONFUSION_ANALYSIS.md  AGENT_HOOK_REACTIVATION_CHECKLIST.md  AGENT_OBSERVABILITY_DIAGNOSTIC_PLAN.md  AGENT_OBSERVABILITY_IMPLEMENTATION_COMPLETE.md  AGENT_STARTUP_TEST_REPORT_2025-10-29.md  AGENT_SYSTEM_REACTIVATED.md  AGENT_SYSTEM_TEST_RESULTS.md  AI_AGENT_SELECTOR_5090_INTEGRATION.md  AI_AGENT_SELECTOR_DESIGN.md  AI_AGENT_SELECTOR_IMPLEMENTATION_COMPLETE.md  ARCHITECTURAL_ISSUES_TO_FIX.md  AUTONOMOUS_CODE_GENERATION_PLAN.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CHANGELOG_CRITICAL_FIXES.md  CLAUDE.md  CLAUDE_MD_MIGRATION.md  CLEANUP_QUICK_REFERENCE.md  CLIENT_WORKS_EVIDENCE.md  COMPLETE_WORKFLOW_ANALYSIS.md  CONFIG_MIGRATION_AUDIT.md  CONTEXT_RECOVERY_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  (+141 more)
.claude/: README.md  architecture-handshake.md  settings.local.json
.claude-plugin/: marketplace.json
.github/: required-checks.yaml
_archive/: ACTIONLOGGER_INTEGRATION_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  ARCHON_CAPABILITIES_RESEARCH.md  ARCHON_INTELLIGENCE_ISSUES.md  ARCHON_SEARCH_INTEGRATION.md  ARCHON_SEARCH_INTEGRATION_SUMMARY.md  ASYNCIO_LOCK_FIX_VERIFICATION.md  CHANGELOG.md  CLAUDE_MD_UPDATE_SUMMARY.md  COVERAGE_QUICK_REFERENCE.md  COVERAGE_SUMMARY.txt  ENHANCEMENT_SUMMARY.md  EVENT_ALIGNMENT_SUMMARY.md  FIXES_APPLIED.md  FIX_SUMMARY_correlation_id.md  HANDOFF.md  HTTPS_SUPPORT_SUMMARY.md  INVESTIGATION_SUMMARY.md  ISSUE_12_FIX_SUMMARY.md  MEMGRAPH_INTEGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  MVP_REQUIREMENTS.md  P2_FIXES_SUMMARY.md  PASSWORD_MIGRATION_SUMMARY.md  PATTERN_DATA_INVESTIGATION_SUMMARY.md  PATTERN_DEDUPLICATION_SUMMARY.md  PATTERN_FILTERING_FIX_SUMMARY.md  PATTERN_FILTER_FIX_SUMMARY.md  PERFORMANCE_FIX_ACTIONLOGGER_CACHING.md  QUICKSTART.md  QUICK_START.md  README_ARCHIVE.md  SAMPLE_ORCHESTRATOR_MANIFEST.md  SECURITY_FIXES_PR26.md  SECURITY_FIXES_SUMMARY.md  SKILLS_CONFIGURATION_AUDIT.md  SLACK_NOTIFICATION_FIX_SUMMARY.md  TASK-7-FIXES-SUMMARY.md  TEST_ACTION_LOGGING_E2E_FIX_SUMMARY.md  TEST_COVERAGE_HEALTH_CHECKER.md  (+22 more)
agents/: AGENT-PARALLEL-DISPATCHER.md  AGENT-WORKFLOW-COORDINATOR.md  AGENT_OFFLOADING_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  COMPLETE_SYSTEM_INTEGRATION.md  FRAMEWORK_PERFORMANCE_BENCHMARK_FIXES.md  INTEGRATION_GUIDE.md  OPERATIONS_GUIDE.md  PERFORMANCE_OPTIMIZATIONS_README.md  PERFORMANCE_QUICK_REFERENCE.md  POLY-3-SUMMARY.md  POLY-F-SUMMARY.md  POLY-G-SUMMARY.md  POLY-H-SUMMARY.md  POLY-I-SUMMARY.md  POLY-J-SUMMARY.md  README.md  STREAM_10_SUMMARY.md  STREAM_8_IMPLEMENTATION_REPORT.md  STREAM_8_SUMMARY.md  SUMMARY.md  USER_GUIDE.md  agent-parallel-dispatcher.md  agent-workflow-coordinator.md  benchmark_improvements.py  core-requirements.yaml  demo_model_generator.py  detect_archon_integration.py  performance-thresholds.yaml  polymorphic-agent.md  quality-gates-spec.yaml  system_manifest.yaml  templates-spec.yaml  test_polymorphic_agent_updates.py
app/: __init__.py  main.py  version.py
claude/: README.md
claude-artifacts/: README.md
claude_hooks/: AGENT_2_DELIVERABLE.md  AGENT_DISPATCH_SYSTEM.md  AGENT_QUICK_REFERENCE.md  API_REFERENCE.md  COMPLETE_CONVENTIONS_SUMMARY.md  CONFIG_AND_MONITORING.md  DEVELOPMENT_WORKFLOW.md  ENHANCED_METADATA_IMPLEMENTATION.md  ENHANCED_METADATA_QUICKREF.md  ENHANCED_PRETOOLUSE_SUMMARY.md  FILE_REFERENCE.md  HANDOFF_OMN94.md  HOOKS_CONFIG_AUDIT_2025-11-11.txt  HOOK_DATABASE_LOGGING_FIX.md  HOOK_INTELLIGENCE_GUIDE.md  HOOK_LOGGING.md  HOW_TO_USE_POLYMORPHIC_AGENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX_RECOMMENDATIONS.md  INSTALLATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  INTELLIGENCE_SERVICES_INTEGRATION_PLAN.md  INTENT_EXTRACTION_RESEARCH_REPORT.md  META_TRIGGER_IMPLEMENTATION_SUMMARY.md  META_TRIGGER_QUICK_START.md  MIGRATION_SUMMARY.md  OMNINODE_NAMING_CONVENTIONS.md  PARALLEL_AGENT_TEST_FIXES_COMPLETE.md  PATTERN_TRACKER_SUMMARY.md  PATTERN_TRACKING_INTEGRATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE4_INTEGRATION_GUIDE.md  PHASE4_QUICKSTART.md  PHASE_1_DEPLOYMENT_COMPLETE.md  POLYMORPHIC_AGENT_TESTING_COMPLETE.md  POLYMORPHIC_AGENT_TEST_PLAN.md  POSTTOOLUSE_ENHANCEMENT_COMPLETE.md  POST_TOOL_USE_METRICS_README.md  (+82 more)
cli/: generate_node.py  hook_agent_health_dashboard.py
config/: MIGRATION_PLAN.md  QUICK_REFERENCE.md  README.md  WEEK1_ACTION_PLAN.md  __init__.py  settings.py  test_async_notification_fix.py  test_env_loading.py  test_password_migration.py  test_production_validation.py  test_settings.py  universal_router.yaml.example
consumers/: DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  QUICKSTART.md  README.md  SUMMARY.md  agent_actions_consumer.py  agent_actions_consumer.service  config.example.json  requirements.txt  start_agent_actions_consumer.sh  test_consumer.py  test_wp2_fixes.py
deployment/: .dockerignore  Dockerfile  Dockerfile.consumer  Dockerfile.context-proxy-nodes  Dockerfile.proxy-api  Dockerfile.routing-adapter  Dockerfile.test-consumer  Dockerfile.test-runner  README.md  docker-compose.proxy.yml  docker-compose.test.yml  docker-compose.yml  entrypoint-routing-adapter.sh
docker/: Dockerfile.migrate
docs/: AGENT_CONTEXT_INJECTION_AUDIT.md  AGENT_DISPATCH_QUICK_FIXES_REVISED.md  AGENT_DISPATCH_QUICK_REFERENCE.md  ARCHETYPAL_NODE_PATTERNS.md  ARCHITECTURE_DOCUMENTATION_PLAN.md  CLI_USAGE.md  COMPATIBILITY_VALIDATOR.md  CONTRACT_BUILDER_SPEC.md  DAY_3_STAGE_4_5_COMPLETION.md  DAY_4_ORCHESTRATOR_ENHANCEMENTS.md  DAY_4_STAGE_4_5_COMPLETION.md  DAY_5_MVP_FOUNDATION_COMPLETE.md  DEVELOPER_HANDOFF.md  DOCUMENTATION_AUDIT_SUMMARY.md  ENHANCED_GENERATION_SYSTEM_DESIGN.md  ESTIMATION_AND_VELOCITY_TRACKING.md  EVENT_BUS_ALIGNMENT_SUMMARY.md  EVENT_BUS_INTELLIGENCE_IMPLEMENTATION.md  INDEX.md  (+64 more)
(+7536 files in other folders)
