[project]
name = "omniclaude"
version = "0.1.0"
description = "Claude Code hooks + learning loop integration"
requires-python = ">=3.12,<4.0"
dependencies = [
    "omnibase-core>=0.9.1,<0.10.0",
    "omnibase-spi>=0.5.0,<0.6.0",
    "omnibase-infra>=0.2.2,<0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-split>=0.8.0",
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "black>=24.0.0",
    "coverage[toml]>=7.4.0",
    "psutil>=5.9.0",
    "kafka-python>=2.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "types-psutil>=7.2.1.20260116",
    "types-psycopg2>=2.9.21.20251012",
    "types-docker>=7.1.0.20260109",
]

[project.scripts]
omniclaude-emit = "omniclaude.hooks.cli_emit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniclaude"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["_archive"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Tests often modify sys.path before imports
"tests/**/test_*.py" = ["E402"]
"tests/*.py" = ["E402"]
# Reclaimed lib modules have legacy patterns (sys.path modification, try/except imports)
# These are not being rewritten, just made functional for CI
"src/omniclaude/lib/**/*.py" = [
    "E402",   # Module level import not at top of file (sys.path modification pattern)
    "F401",   # Imported but unused (try/except import pattern for optional deps)
    "B007",   # Loop variable not used (legacy code patterns)
    "B904",   # raise without from (legacy exception handling)
    "ARG001", # Unused function argument (interface compatibility)
    "ARG002", # Unused method argument (interface compatibility)
    "SIM102", # Use single if instead of nested if (legacy readability patterns)
    "SIM103", # Return bool expression directly (legacy explicit return style)
    "SIM105", # Use contextlib.suppress (legacy try/except/pass pattern)
    "SIM117", # Use single with statement (async context manager patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["omniclaude"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
